Added some and modified existing unit tests for LoanService class